# RubiksCubeSolver

./: -- SQLite.sql  .gitattributes  .gitignore  BFS_LBL.py  DQN2.py  DQNAgent.py  IDASolver.py  LBL.py  LBL2.py  LGF.py  LearingLoop.py  ML2.py  MLSolver.py  README.md  RubiksCube.py  RubiksCube2.py  TestModel.pth  TestSolverOptimizer.pth  baseline_training.py  bruteForceMethod.py  depth_predict2.py  depth_predictor.py  final_model.pth  final_model26.pth  greedy_pruning_table.py  gymEnvironment.py  ida_solver.py  kociemba.py  kociemba_pruning_phase1_tests.db  kociemba_utils.py  model_eval.py  my_gym.py  pred_train.py  requirements.txt  rubicsCubeOLD.py  rubiks_cube_model.h5  rubiks_cube_model.pth  scaler.pkl  state_predict.py  state_train.py  (+3 more)
RubiksCube2/: pyvenv.cfg
RubiksCube2/Scripts/: activate  activate.bat  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  (+3 more)
RubiksCubeSolver/: pyvenv.cfg
machine_learning/: state_predict.py  states_generation.py
mobile_app/: README.md  main.py  requirements.txt  test.py
mobile_app_new/: pyproject.toml
mobile_app_new/src/: main.py
mobile_app_new/src/helperFunctions/: network_discovery.py
mobile_app_new/src/scenes/: camera_scan copy.py  camera_scan.py  cube.py  results.py
old_solutions/: LBL_old.py  rubicsCubeOLD.py
pypyRubicsCube/: pyvenv.cfg
server/: BFS_LBL.py  IDASolver.py  RubiksCube.py  kociemba.py  server.py
tests/: RubiksCube.py  db.csv  results_kociemba.csv  results_lbl.csv  results_ml_13.csv  run_tests.py  test_db_gen.py  test_results.txt
(+12 files in other folders)
