[project]
name = "RubiksCubeSolver"
version = "1.0.0"
description = "Engeenering project"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.26.0",
  "opencv-python==4.10.0.84",
  "numpy==1.26.4",
  "aiohttp==3.9.5"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "net.kamil"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "RubiksCubeSolver"

# company name to display in about app dialogs
company = "Kamil"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Kamil"

[tool.flet.android.permission] # --android-permissions
"android.permission.CAMERA" = true
"android.permission.INTERNET" = true

[tool.flet.android.feature] # --android-features
"android.hardware.camera" = false

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
  "flet[all]==0.26.0",
  "opencv-python==4.10.0.84",
  "numpy==1.26.4",
  "aiohttp==3.9.5"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0"}